<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/margin_small"
    tools:context=".view.fragments.FiltersFragment">

    <View
        android:layout_width="100dp"
        android:layout_height="3dp"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/margin_medium"
        android:background="@android:color/darker_gray"
        />

    <TextView
        android:id="@+id/desc_text"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/filters" />

    <CheckBox
        android:id="@+id/with_image_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_medium"
        android:text="@string/show_only_with_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort_radio_group"/>

    <TextView
        android:id="@+id/spinner_text"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintTop_toBottomOf="@id/with_image_checkbox"
        app:layout_constraintBottom_toBottomOf="@id/type_search_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_in"/>


    <Spinner
        android:id="@+id/type_search_spinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toEndOf="@id/spinner_text"
        app:layout_constraintTop_toBottomOf="@id/with_image_checkbox"
        android:entries="@array/sorting_options"
        />

    <RadioGroup
        android:id="@+id/sort_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_text"
        >

        <RadioButton
            android:id="@+id/decreasing_likes"
            android:text="@string/decrease_likes"
            android:textSize="@dimen/text_size_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/increasing_likes"
            android:text="@string/increase_likes"
            android:textSize="@dimen/text_size_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/alphabet_sorted"
            android:text="@string/increase_authors"
            android:textSize="@dimen/text_size_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/reverse_alphaber_sorted"
            android:text="@string/decrease_authors"
            android:textSize="@dimen/text_size_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RadioGroup>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_button"
        app:layout_constraintEnd_toStartOf="@id/apply_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/revert"
        app:layout_constraintTop_toBottomOf="@id/type_search_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_button"
        app:layout_constraintStart_toEndOf="@id/clear_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_search_spinner"
        android:text="@string/apply"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>